# logix-designer-mcp

./: .gitignore  .mcp.json  AGENTS.md  README.md  pyproject.toml
docs/: cross_reference_spec.md  fbd_sfc_representation.md  improvement_roadmap.md  logix_language_reference.md
logix-plugin/scripts/: launch_server.py
src/logix_mcp/: __init__.py  cli.py  db.py  diagnostics.py  extractors.py  graph.py  hardware.py  intelligence.py  models.py  parser.py  routines.py  runtime_reader.py  runtime_store.py  sdk_adapter.py  server.py  workspace.py  xrefs.py
tests/: test_budget.py  test_db.py  test_diagnostics.py  test_extractors.py  test_graph.py  test_hardware_ir.py  test_intelligence.py  test_launch_server.py  test_parser_workspace.py  test_quality_gate.py  test_real_l5x_smoke.py  test_routines_ir.py  test_runtime_cli_mcp.py  test_runtime_reader.py  test_runtime_store.py  test_sdk_adapter.py  test_xrefs.py
